--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -23,6 +23,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-base; 
+  padding-top: 90px; // navbar height
 }
 
 .logo-img {
